// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cas-login Renders \`cas-login\` with redirect query and title 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="text-body-2"
  >
    Login with CAS
  </div>
  <a
    class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
    href="https://canopsis/backend/api/v4/cas/login?redirect=http%3A%2F%2Flocalhost%2Fredirect&service=https%3A%2F%2Fcanopsis%2Fbackend%2Fapi%2Fv4%2Fcas%2Floggedin"
  >
    <span
      class="v-btn__content"
    >
    Cas config title
    </span>
  </a>
</div>
`;

exports[`cas-login Renders \`cas-login\` without redirect 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="text-body-2"
  >
    Login with CAS
  </div>
  <a
    class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
    href="https://canopsis/backend/api/v4/cas/login?redirect=http%3A%2F%2Flocalhost&service=https%3A%2F%2Fcanopsis%2Fbackend%2Fapi%2Fv4%2Fcas%2Floggedin"
  >
    <span
      class="v-btn__content"
    >
    Login with CAS
    </span>
  </a>
</div>
`;
